Link to Use-Case UI

--- a/Change-Store.html
+++ b/Change-Store.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Change Stores</title>
+        <title>Change Store</title>
     </head>
 
     <body>
-<h1>Change Stores</h1>
+<h1>Change Store</h1>
 <h2>Show Current Promotions</h2>
 <a href="index.html">HOME</a>
 
