--- a/Pay.Html
+++ b/Pay.Html
@@ -6,7 +6,7 @@
 
     <body>
 <h1>Pay</h1>
-<h2>Redeem Coupons</h2>
+<h2>Redeem Coupon</h2>
 <h2>Receive Receipt</h2>
 <a href="index.html">HOME</a>
 
