For html elements

--- a/Register.html
+++ b/Register.html
@@ -6,7 +6,29 @@
 
     <body>
 <h1>Register</h1>
+<input type="text" placeholder="E-Mail"> <br>
+<input type="text" placeholder="Username"> <br>
+<input type="text" placeholder="Password"> <br>
+<input type="text" placeholder="Verify Password:"> <br>
 
+<h2>Devices Owned</h2>
+<div>Click on all the devices you own:</div><br>
+<input type="checkbox"><label>Computer</label><br>
+<input type="checkbox"><label>Laptop</label><br>
+<input type="checkbox"><label>Smartphone</label>
+<input type="checkbox"><label>Other</label><input type="text" placeholder="Specify:"><br>
+<br>
+<h2>Sex</h2>
+<input type="radio" name="Sex"><label>Male</label><br>
+<input type="radio" name="Sex"><label>Female</label><br>
+<input type="radio" name="Sex"><label>Prefer not to answer</label><br>
+<br>
+<h2>Bio</h2>
+<div>Tell other users about yourself:</div>
+<textarea row=5 cols=50></textarea><br><br>
+<h2>Upload a Picture</h2>
+<input type="file"><br><br>
+<input type="button" value="Register" onClick= "location.href= 'Thank-You.html'"> <br>
 <a href="index.html">HOME</a>
 
     </body>
