--- a/Shop-For-Groceries.html
+++ b/Shop-For-Groceries.html
@@ -6,8 +6,36 @@
 
     <body>
 <h1>Shop For Groceries</h1>
+<h2>Current Cart</h2>
+<h3>View Added Items</h3>
+<select>
+    <option>Apples</option>
+    <option>Bananas</option>
+    <option>Blueberries</option>
+    <option>Oranges</option>
+</select>
 <h2>Browse for Availability</h2>
-<h2>Know Prices of Items</h2>
+<input type="text" placeholder="Search:"><br>
+<table>
+    <tr><td><img src="apples.jpg" style="width:20%"></td></tr>
+    <tr><td> Apples: $.50 <input type="button" value="Add"></td></tr>
+    </table>
+    <table>
+        <tr><td><img src="bananas.jpg" style="width:20%"></td></tr>
+        <tr><td> Bananas: $.65 <input type="button" value="Add"></td></tr>
+        </table>
+        <table>
+            <tr><td><img src="blueberries.jpg" style="width:20%"></td></tr>
+            <tr><td> Blueberries: $.05 <input type="button" value="Add"></td></tr>
+            </table>
+            <table>
+                <tr><td><img src="oranges.jpg" style="width:20%"></td></tr>
+                <tr><td> Oranges: $.25 <input type="button" value="Add"></td></tr>
+                </table>
+                            
+    
+<h2>Checkout</h2>
+<input type="button" value="Proceed to Checkout"><br><br>
 <a href="index.html">HOME</a>
 
     </body>
