--- a/Payment.html
+++ b/Payment.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pay</title>
+        <title>Payment</title>
     </head>
 
     <body>
 <h1>Pay</h1>
-<h2>Redeem Coupon</h2>
+<h2>Redeem Coupons</h2>
 <h2>Receive Receipt</h2>
 <a href="index.html">HOME</a>
 
