--- a/Register.html
+++ b/Register.html
@@ -15,6 +15,7 @@
 <div>Click on all the devices you own:</div><br>
 <input type="checkbox"><label>Computer</label><br>
 <input type="checkbox"><label>Laptop</label><br>
+<input type="checkbox"><label>Tablet</label>
 <input type="checkbox"><label>Smartphone</label>
 <input type="checkbox"><label>Other</label><input type="text" placeholder="Specify:"><br>
 <br>
