--- a/Login.html
+++ b/Login.html
@@ -6,7 +6,9 @@
 
     <body>
 <h1>Login</h1>
-
+<input type="text" placeholder="Username"> <br>
+<input type="text" placeholder="Password"> <br>
+<input type="button" value="Login"><br>
 <a href="index.html">HOME</a>
 
     </body>
